--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -12,7 +12,11 @@
 
 <ul>
   <% @person.phone_numbers.each do |phone_number| %>
-    <li><%= phone_number.number %> <%= link_to 'edit', edit_phone_number_path(phone_number) %></li>
+    <li>
+      <%= phone_number.number %>
+      <%= link_to 'edit', edit_phone_number_path(phone_number) %>
+      <%= link_to 'delete', phone_number_path(phone_number), method: :delete %>
+    </li>
   <% end %>
 </ul>
 
