--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -24,6 +24,8 @@
   <% @person.email_addresses.each do |email_address| %>
     <li>
       <%= email_address.address %>
+      <%= link_to 'edit email', edit_email_address_path(email_address) %>
+      <%= link_to 'delete email', email_address_path(email_address), method: :delete %>
     </li>
   <% end %>
 </ul>
