--- a/app/views/email_addresses/_form.html.erb
+++ b/app/views/email_addresses/_form.html.erb
@@ -15,7 +15,8 @@
     <%= f.label :address %><br>
     <%= f.text_field :address %>
   </div>
-    <%= f.hidden_field :person_id %>
+    <%= f.hidden_field :contact_id %>
+    <%= f.hidden_field :contact_type %>
   <div class="actions">
     <%= f.submit %>
   </div>
