--- a/app/views/phone_numbers/_form.html.erb
+++ b/app/views/phone_numbers/_form.html.erb
@@ -15,7 +15,8 @@
     <%= f.label :number %><br>
     <%= f.text_field :number %>
   </div>
-    <%= f.hidden_field :person_id %>
+    <%= f.hidden_field :contact_id %>
+    <%= f.hidden_field :contact_type %>
   <div class="actions">
     <%= f.submit %>
   </div>
