--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -14,7 +14,4 @@
 
 <%= render 'email_addresses/email_addresses', contact: @person %>
 
-<%= link_to 'Edit', edit_person_path(@person) %> |
-<%= link_to 'Back', people_path %> |
-<%= link_to "Add phone number for #{@person}", new_phone_number_path(contact_id: @person, contact_type: 'Person') %> |
-<%= link_to "Add email for #{@person}", new_email_address_path(contact_id: @person, contact_type: 'Person') %>
+<%= render 'contacts/actions', contact: @person %>
