--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+<div id="account">
+  <% if current_user %>
+    <%= link_to "Logout", logout_path, id: "logout" %>
+  <% else %>
+    <%= link_to "Login", login_path, id: "login" %>
+  <% end %>
+</div>
+
 <%= yield %>
 
 </body>
