--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 <div id="account">
   <% if current_user %>
-    <%= link_to "Logout", logout_path, id: "logout" %>
+    <%= link_to "Logout", logout_path, id: "logout", method: 'delete' %>
   <% else %>
     <%= link_to "Login", login_path, id: "login" %>
   <% end %>
